# weather

./: LICENSE  README.md  weather.cabal
src/: Analysis.hs  Generator.hs  Main.hs  Parser.hs  Types.hs
