name:                  weather
version:               0.1.0.0
synopsis:              Ambiata take-home programming task
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries
maintainer:            tim@utf8.me
build-type:            Simple
cabal-version:         >=1.10

executable weather
  main-is:             Main.hs
  other-modules:       Types, Parser, Analysis, Generator
                       
  default-extensions:  GeneralizedNewtypeDeriving,
                       OverloadedStrings,
                       MultiWayIf,
                       BangPatterns,
                       StandaloneDeriving,
                       ScopedTypeVariables,
                       ExistentialQuantification,
                       RankNTypes

  build-depends:       base                 >=4.8   && <4.9,
                       time                 >=1.5   && <2.0,
                       bytestring           >=0.10  && <1.0,
                       random               >=1.1   && <2.0,
                       containers           >=0.5.6 && <1.0,
                       attoparsec           >=0.13  && <1.0,
                       pipes                >=4.1.5 && <5.0,
                       pipes-bytestring     >=2.1.1 && <3.0,
                       mtl                  >=2.2   && <3.0,
                       optparse-applicative >=0.11  && <1.0,
                       heaps                >=0.3   && <1.0

  hs-source-dirs:      src
  default-language:    Haskell2010